<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/account_details"
        android:layout_width="match_parent"
        android:layout_height="@dimen/options_item_height"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/space_big"
        android:text="@string/account_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_files"
        android:layout_width="match_parent"
        android:layout_height="@dimen/options_item_height"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/space_big"
        android:text="@string/my_files"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@id/account_details" />

    <TextView
        android:id="@+id/donate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/options_item_height"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/space_big"
        android:text="@string/donate"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@id/my_files" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/options_item_height"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/space_big"
        android:text="@string/contact"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@id/donate" />

</androidx.constraintlayout.widget.ConstraintLayout>
