<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/space_big"
            android:elevation="12dp"
            android:padding="@dimen/space_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Circle"
            app:srcCompat="@drawable/gofileavatar"
            app:strokeColor="@android:color/holo_blue_dark"
            app:strokeWidth="8dp" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/space_big"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar_image"
            tools:text="email334@gmail.com" />

        <TextView
            android:id="@+id/api_token_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/space_big"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_text"
            tools:text="API Token: 87sdfsdfBFdbDFbh87fsdfBbFhdsj" />

        <TextView
            android:id="@+id/files_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_big"
            android:text="@string/files"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toStartOf="@+id/folders_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/api_token_text" />

        <TextView
            android:id="@+id/folders_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_big"
            android:text="@string/folders"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/api_token_text" />

        <TextView
            android:id="@+id/total_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_big"
            android:text="@string/total_size"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/folders_text"
            app:layout_constraintTop_toBottomOf="@id/api_token_text" />

        <TextView
            android:id="@+id/files_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@+id/files_text"
            app:layout_constraintStart_toStartOf="@+id/files_text"
            app:layout_constraintTop_toBottomOf="@id/files_text"
            tools:text="32" />

        <TextView
            android:id="@+id/folders_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@+id/folders_text"
            app:layout_constraintStart_toStartOf="@+id/folders_text"
            app:layout_constraintTop_toBottomOf="@id/folders_text"
            tools:text="5" />

        <TextView
            android:id="@+id/total_size_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@+id/total_size_text"
            app:layout_constraintStart_toStartOf="@+id/total_size_text"
            app:layout_constraintTop_toBottomOf="@id/total_size_text"
            tools:text="23635" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/details_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="avatar_image,email_text,api_token_text,files_text,folders_text,total_size_text,files_count,folders_count,total_size_count"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/account_details_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/space_big"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
